--- a/guide/development.html
+++ b/guide/development.html
@@ -6,8 +6,9 @@
     <title>参与 Fast AMap 项目开发 | Fast AMap</title>
     <meta name="description" content="基于 Vue 的高性能高德地图件库">
     <style type="text/css">.page-nav, .theme-default-content:not(.custom) { max-width: 90% !important; margin: auto; } </style>
+  <link rel="icon" href="./public/favicon.ico">
     
-    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.bec45750.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/10.cc4ee9d7.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/11.cfc97e09.js"><link rel="prefetch" href="/fast-amap/assets/js/12.d907c171.js"><link rel="prefetch" href="/fast-amap/assets/js/3.d15a89d6.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.1e575c82.js"><link rel="prefetch" href="/fast-amap/assets/js/6.8774e577.js"><link rel="prefetch" href="/fast-amap/assets/js/7.1300db52.js"><link rel="prefetch" href="/fast-amap/assets/js/8.720ba9a5.js"><link rel="prefetch" href="/fast-amap/assets/js/9.775d778a.js">
+    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.46532a24.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/11.e4c06af8.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.e208dd6a.js"><link rel="prefetch" href="/fast-amap/assets/js/12.94ccf644.js"><link rel="prefetch" href="/fast-amap/assets/js/13.ba0d1549.js"><link rel="prefetch" href="/fast-amap/assets/js/3.8d31b24e.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.563300d6.js"><link rel="prefetch" href="/fast-amap/assets/js/6.1d1eabf7.js"><link rel="prefetch" href="/fast-amap/assets/js/7.e839b5fb.js"><link rel="prefetch" href="/fast-amap/assets/js/8.5d8102b4.js"><link rel="prefetch" href="/fast-amap/assets/js/9.bef20e39.js">
     <link rel="stylesheet" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css">
   </head>
   <body>
@@ -53,6 +54,6 @@ yarn package
         <a href="/fast-amap/guide/getting-started.html" class="prev">
           快速上手
         </a></span> <!----></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/fast-amap/assets/js/app.bec45750.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/10.cc4ee9d7.js" defer></script>
+    <script src="/fast-amap/assets/js/app.46532a24.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/11.e4c06af8.js" defer></script>
   </body>
 </html>
