--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style type="text/css">.page-nav, .theme-default-content:not(.custom) { max-width: 90% !important; margin: auto; } </style>
   <link rel="icon" href="./public/favicon.ico">
     
-    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.b55f76d0.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/5.563300d6.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.5217f907.js"><link rel="prefetch" href="/fast-amap/assets/js/11.54c93b02.js"><link rel="prefetch" href="/fast-amap/assets/js/12.94ccf644.js"><link rel="prefetch" href="/fast-amap/assets/js/13.ba0d1549.js"><link rel="prefetch" href="/fast-amap/assets/js/3.8d31b24e.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/6.1d1eabf7.js"><link rel="prefetch" href="/fast-amap/assets/js/7.b8068345.js"><link rel="prefetch" href="/fast-amap/assets/js/8.f032ceb4.js"><link rel="prefetch" href="/fast-amap/assets/js/9.af2ea5ae.js">
+    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.84a0c535.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/5.29d57cd4.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.126dea0d.js"><link rel="prefetch" href="/fast-amap/assets/js/11.58d752f9.js"><link rel="prefetch" href="/fast-amap/assets/js/12.3e31decb.js"><link rel="prefetch" href="/fast-amap/assets/js/13.0018d84f.js"><link rel="prefetch" href="/fast-amap/assets/js/14.01848eb8.js"><link rel="prefetch" href="/fast-amap/assets/js/3.f6277f7c.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/6.8774e577.js"><link rel="prefetch" href="/fast-amap/assets/js/7.e839b5fb.js"><link rel="prefetch" href="/fast-amap/assets/js/8.d54b8460.js"><link rel="prefetch" href="/fast-amap/assets/js/9.aafb1488.js">
     <link rel="stylesheet" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css">
   </head>
   <body>
@@ -29,6 +29,6 @@
 </code></pre></div></div> <div class="footer">
     MIT Licensed | Copyright © 2019-present txs1992
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/fast-amap/assets/js/app.b55f76d0.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/5.563300d6.js" defer></script>
+    <script src="/fast-amap/assets/js/app.84a0c535.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/5.29d57cd4.js" defer></script>
   </body>
 </html>
