--- a/guide/getting-started.html
+++ b/guide/getting-started.html
@@ -8,7 +8,7 @@
     <style type="text/css">.page-nav, .theme-default-content:not(.custom) { max-width: 90% !important; margin: auto; } </style>
   <link rel="icon" href="./public/favicon.ico">
     
-    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.84a0c535.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/13.0018d84f.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.126dea0d.js"><link rel="prefetch" href="/fast-amap/assets/js/11.58d752f9.js"><link rel="prefetch" href="/fast-amap/assets/js/12.3e31decb.js"><link rel="prefetch" href="/fast-amap/assets/js/14.01848eb8.js"><link rel="prefetch" href="/fast-amap/assets/js/3.f6277f7c.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.29d57cd4.js"><link rel="prefetch" href="/fast-amap/assets/js/6.8774e577.js"><link rel="prefetch" href="/fast-amap/assets/js/7.e839b5fb.js"><link rel="prefetch" href="/fast-amap/assets/js/8.d54b8460.js"><link rel="prefetch" href="/fast-amap/assets/js/9.aafb1488.js">
+    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.de858637.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/14.1a29e28e.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.616fbe99.js"><link rel="prefetch" href="/fast-amap/assets/js/11.50fa7b26.js"><link rel="prefetch" href="/fast-amap/assets/js/12.06634a63.js"><link rel="prefetch" href="/fast-amap/assets/js/13.18bff638.js"><link rel="prefetch" href="/fast-amap/assets/js/15.ffbfdd10.js"><link rel="prefetch" href="/fast-amap/assets/js/3.43b86d2d.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.29d57cd4.js"><link rel="prefetch" href="/fast-amap/assets/js/6.8774e577.js"><link rel="prefetch" href="/fast-amap/assets/js/7.e839b5fb.js"><link rel="prefetch" href="/fast-amap/assets/js/8.2a28c554.js"><link rel="prefetch" href="/fast-amap/assets/js/9.518b893c.js">
     <link rel="stylesheet" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css">
   </head>
   <body>
@@ -68,6 +68,6 @@
         </a>
         →
       </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/fast-amap/assets/js/app.84a0c535.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/13.0018d84f.js" defer></script>
+    <script src="/fast-amap/assets/js/app.de858637.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/14.1a29e28e.js" defer></script>
   </body>
 </html>
