--- a/guide/index.html
+++ b/guide/index.html
@@ -8,7 +8,7 @@
     <style type="text/css">.page-nav, .theme-default-content:not(.custom) { max-width: 90% !important; margin: auto; } </style>
   <link rel="icon" href="./public/favicon.ico">
     
-    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.9308e915.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/14.21d571e4.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.3927a486.js"><link rel="prefetch" href="/fast-amap/assets/js/11.8ad03ea1.js"><link rel="prefetch" href="/fast-amap/assets/js/12.43555e5a.js"><link rel="prefetch" href="/fast-amap/assets/js/13.fae1ec97.js"><link rel="prefetch" href="/fast-amap/assets/js/15.b66748d7.js"><link rel="prefetch" href="/fast-amap/assets/js/16.ea425c0d.js"><link rel="prefetch" href="/fast-amap/assets/js/17.6b013f9c.js"><link rel="prefetch" href="/fast-amap/assets/js/3.97f3fd1c.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.563300d6.js"><link rel="prefetch" href="/fast-amap/assets/js/6.1d1eabf7.js"><link rel="prefetch" href="/fast-amap/assets/js/7.584a9785.js"><link rel="prefetch" href="/fast-amap/assets/js/8.7aa6ab22.js"><link rel="prefetch" href="/fast-amap/assets/js/9.36b93c0a.js">
+    <link rel="preload" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css" as="style"><link rel="preload" href="/fast-amap/assets/js/app.ebf9ef47.js" as="script"><link rel="preload" href="/fast-amap/assets/js/2.3c2a200f.js" as="script"><link rel="preload" href="/fast-amap/assets/js/15.47a3c890.js" as="script"><link rel="prefetch" href="/fast-amap/assets/js/10.7ccd6546.js"><link rel="prefetch" href="/fast-amap/assets/js/11.019060b9.js"><link rel="prefetch" href="/fast-amap/assets/js/12.aa127112.js"><link rel="prefetch" href="/fast-amap/assets/js/13.20549bd5.js"><link rel="prefetch" href="/fast-amap/assets/js/14.a1f99f33.js"><link rel="prefetch" href="/fast-amap/assets/js/16.fdc9717b.js"><link rel="prefetch" href="/fast-amap/assets/js/17.2466e30c.js"><link rel="prefetch" href="/fast-amap/assets/js/18.c902745c.js"><link rel="prefetch" href="/fast-amap/assets/js/3.d324e346.js"><link rel="prefetch" href="/fast-amap/assets/js/4.11d613bd.js"><link rel="prefetch" href="/fast-amap/assets/js/5.29d57cd4.js"><link rel="prefetch" href="/fast-amap/assets/js/6.8774e577.js"><link rel="prefetch" href="/fast-amap/assets/js/7.d13f1059.js"><link rel="prefetch" href="/fast-amap/assets/js/8.fa15e0ae.js"><link rel="prefetch" href="/fast-amap/assets/js/9.f2c30e15.js">
     <link rel="stylesheet" href="/fast-amap/assets/css/0.styles.7e9c1b8c.css">
   </head>
   <body>
@@ -17,6 +17,6 @@
         </a>
         →
       </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/fast-amap/assets/js/app.9308e915.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/14.21d571e4.js" defer></script>
+    <script src="/fast-amap/assets/js/app.ebf9ef47.js" defer></script><script src="/fast-amap/assets/js/2.3c2a200f.js" defer></script><script src="/fast-amap/assets/js/15.47a3c890.js" defer></script>
   </body>
 </html>
